include/Win32/Physics.NGDImport.hpp

//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef unsigned unsigned_int;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonCollision;
typedef void __cdecl (*NewtonTreeCollisionCallback)(const void * bodyWithTreeCollision, const void * Body, int faceId, const PdFloat vertex, int vertexStrideInBytes);
typedef NewtonTreeCollisionCallback *PNewtonTreeCollisionCallback;
typedef void __cdecl (*NewtonBodyDestructor)(const void * Body);
typedef void __cdecl (*NewtonApplyForceAndTorque)(const void * Body, float timestep, int threadIndex);
typedef void __cdecl (*NewtonSetTransform)(const void * Body, const PdFloat matrix, int threadIndex);
typedef void __cdecl (*NewtonCollisionIterator)(void * userData, int vertexCount, const PdFloat FaceArray, int faceId);
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" int __cdecl NewtonTreeCollisionGetVertexListIndexListInAABB(const void * TreeCollision, const PdFloat p0, const PdFloat p1, const PdFloat vertexArray, System::PInteger vertexCount, System::PInteger vertexStrideInBytes, const System::PInteger indexList, int maxIndexCount, const System::PInteger faceAttribute);
extern "C" void __cdecl NewtonStaticCollisionSetDebugCallback(const void * staticCollision, PNewtonTreeCollisionCallback userCallback);
extern "C" int __cdecl NewtonCollisionPointDistance(const void * NewtonWorld, const PdFloat point, const void * collision, const PdFloat matrix, PdFloat contact, PdFloat normal, int threadIndex);
extern "C" int __cdecl NewtonCollisionClosestPoint(const void * NewtonWorld, const void * collsionA, const PdFloat matrixA, const void * collisionB, const PdFloat matrixB, PdFloat contactA, PdFloat contactB, PdFloat normalAB, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollide(const void * NewtonWorld, int maxSize, const void * collsionA, const PdFloat matrixA, const void * collisionB, const PdFloat matrixB, PdFloat contacts, PdFloat normals, PdFloat penetration, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollideContinue(const void * NewtonWorld, int maxSize, const float timestep, const void * collsionA, const PdFloat matrixA, const PdFloat velocA, const float omegaA, const void * collsionB, const PdFloat matrixB, const PdFloat velocB, const float omegaB, PdFloat timeOfImpact, PdFloat contacts, PdFloat normals, PdFloat penetration, int threadIndex);
extern "C" void __cdecl NewtonCollisionSupportVertex(const void * collision, const PdFloat dir, PdFloat vertex);
extern "C" float __cdecl NewtonCollisionRayCast(const void * collision, const PdFloat p0, const PdFloat p1, PdFloat normals, System::PInteger attribute);
extern "C" void __cdecl NewtonCollisionCalculateAABB(const void * collision, const PdFloat matrix, PdFloat p0, PdFloat p1);
extern "C" void __cdecl NewtonCollisionForEachPolygonDo(const void * collision, const PdFloat matrix, NewtonCollisionIterator callback, void * userData);
extern "C" void __cdecl NewtonSetEulerAngle(const PdFloat eulersAngles, PdFloat matrix);
extern "C" void __cdecl NewtonGetEulerAngle(const PdFloat matrix, PdFloat eulersAngles);
extern "C" float __cdecl NewtonCalculateSpringDamperAcceleration(float dt, float ks, float x, float kd, float s);
extern "C" void * __cdecl NewtonCreateBody(const void * NewtonWorld, const void * collision, const PdFloat matrix);
extern "C" void __cdecl NewtonDestroyBody(const void * NewtonWorld, const void * Body);
extern "C" void __cdecl NewtonBodyAddForce(const void * Body, const PdFloat Force);
extern "C" void __cdecl NewtonBodyAddTorque(const void * Body, const PdFloat torque);
extern "C" void __cdecl NewtonBodyCalculateInverseDynamicsForce(const void * Body, float timestep, const PdFloat desiredVeloc, PdFloat forceOut);
extern "C" void __cdecl NewtonBodySetMatrix(const void * Body, const PdFloat matrix);
extern "C" void __cdecl NewtonBodySetMatrixRecursive(const void * Body, const PdFloat matrix);
extern "C" void __cdecl NewtonBodySetMassMatrix(const void * Body, float mass, float Ixx, float Iyy, float Izz);
extern "C" void __cdecl NewtonBodySetMaterialGroupID(const void * Body, int id);
extern "C" void __cdecl NewtonBodySetContinuousCollisionMode(const void * Body, int state);
extern "C" void __cdecl NewtonBodySetJointRecursiveCollision(const void * Body, unsigned state);
extern "C" void __cdecl NewtonBodySetOmega(const void * Body, const PdFloat omega);
extern "C" void __cdecl NewtonBodySetVelocity(const void * Body, const PdFloat velocity);
extern "C" void __cdecl NewtonBodySetForce(const void * Body, const PdFloat Force);
extern "C" void __cdecl NewtonBodySetTorque(const void * Body, const PdFloat torque);
extern "C" void __cdecl NewtonBodySetCentreOfMass(const void * Body, const PdFloat com);
extern "C" void __cdecl NewtonBodySetLinearDamping(const void * Body, float linearDamp);
extern "C" void __cdecl NewtonBodySetAngularDamping(const void * Body, const PdFloat angularDamp);
extern "C" void __cdecl NewtonBodySetUserData(const void * Body, void * userData);
extern "C" void __cdecl NewtonBodySetCollision(const void * Body, const void * collision);
extern "C" int __cdecl NewtonBodyGetSleepState(const void * Body);
extern "C" int __cdecl NewtonBodyGetAutoSleep(const void * Body);
extern "C" void __cdecl NewtonBodySetAutoSleep(const void * Body, int state);
extern "C" int __cdecl NewtonBodyGetFreezeState(const void * Body);
extern "C" void __cdecl NewtonBodySetFreezeState(const void * Body, int state);
extern "C" void __cdecl NewtonBodySetDestructorCallback(const void * Body, NewtonBodyDestructor callback);
extern "C" void __cdecl NewtonBodySetTransformCallback(const void * Body, NewtonSetTransform callback);
extern "C" NewtonSetTransform __cdecl NewtonBodyGetTransformCallback(const void * Body);
extern "C" void __cdecl NewtonBodySetForceAndTorqueCallback(const void * Body, NewtonApplyForceAndTorque callback);
extern "C" NewtonApplyForceAndTorque __cdecl NewtonBodyGetForceAndTorqueCallback(const void * Body);
extern "C" void * __cdecl NewtonBodyGetUserData(const void * Body);
extern "C" void * __cdecl NewtonBodyGetWorld(const void * Body);
extern "C" void * __cdecl NewtonBodyGetCollision(const void * Body);
extern "C" int __cdecl NewtonBodyGetMaterialGroupID(const void * Body);