Source/NGD.Import.pas


function NewtonTreeCollisionGetVertexListIndexListInAABB(const TreeCollision: PNewtonCollision;
  const p0, p1: PdFloat; const vertexArray: PdFloat; vertexCount, vertexStrideInBytes: PInteger;
  const indexList: PInteger; maxIndexCount: integer; const faceAttribute: PInteger): integer; cdecl;
  external NewtonDLL;

procedure NewtonStaticCollisionSetDebugCallback(const staticCollision: PNewtonCollision;
  userCallback: PNewtonTreeCollisionCallback); cdecl;
  external{$IFDEF __GPC__}name 'NewtonStaticCollisionSetDebugCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};


// *****************************************************************************************************************************
//
// General purpose collision library functions
//
// *****************************************************************************************************************************

function NewtonCollisionPointDistance(const NewtonWorld: PNewtonWorld; const point: PdFloat;
  const collision: PNewtonCollision; const matrix: PdFloat; contact: PdFloat; normal: PdFloat;
  threadIndex: integer): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCollisionPointDistance'{$ELSE}NewtonDLL{$ENDIF __GPC__};
// for the end user
function NewtonCollisionClosestPoint(const NewtonWorld: PNewtonWorld;
  const collsionA: PNewtonCollision; const matrixA: PdFloat; const collisionB: PNewtonCollision;
  const matrixB: PdFloat; contactA, contactB, normalAB: PdFloat; threadIndex: integer): integer;
  cdecl; external{$IFDEF __GPC__}name 'NewtonCollisionClosestPoint'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCollisionCollide(const NewtonWorld: PNewtonWorld; maxSize: integer;
  const collsionA: PNewtonCollision; const matrixA: PdFloat; const collisionB: PNewtonCollision;
  const matrixB: PdFloat; contacts, normals, penetration: PdFloat; threadIndex: integer): integer;
  cdecl; external{$IFDEF __GPC__}name 'NewtonCollisionCollide'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCollisionCollideContinue(const NewtonWorld: PNewtonWorld; maxSize: integer;
  const timestep: dFloat; const collsionA: PNewtonCollision; const matrixA: PdFloat;
  const velocA: PdFloat; const omegaA: dFloat; const collsionB: PNewtonCollision;
  const matrixB: PdFloat; const velocB: PdFloat; const omegaB: dFloat; timeOfImpact: PdFloat;
  contacts: PdFloat; normals: PdFloat; penetration: PdFloat; threadIndex: integer): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCollisionCollideContinue'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonCollisionSupportVertex(const collision: PNewtonCollision; const dir: PdFloat;
  vertex: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonCollisionSupportVertex'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonCollisionRayCast(const collision: PNewtonCollision; const p0: PdFloat;
  const p1: PdFloat; normals: PdFloat; attribute: PInteger): dFloat; cdecl; external NewtonDLL;
procedure NewtonCollisionCalculateAABB(const collision: PNewtonCollision; const matrix: PdFloat;
  p0: PdFloat; p1: PdFloat); cdecl; external NewtonDLL;

procedure NewtonCollisionForEachPolygonDo(const collision: PNewtonCollision; const matrix: PdFloat;
  callback: NewtonCollisionIterator;
  // **********************************************************************************************
  //
  // collision aggregates, are a collision node on eh broad phase the serve as the root nod for a collection of rigid bodies
  // that shared the property of being in close proximity all the time, they are similar to compound collision by the group bodies instead of collision instances
  // These are good for speeding calculation calculation of rag doll, Vehicles or contractions of rigid bodied lined by joints.
  // also for example if you know that many the life time of a group of bodies like the object on a house of a building will be localize to the confide of the building
  // then warping the bodies under an aggregate will reduce collision calculation of almost an order of magnitude.
  //
  // **********************************************************************************************
  userData: Pointer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonCollisionForEachPolygonDo'{$ELSE}NewtonDLL{$ENDIF __GPC__};

// *****************************************************************************************************************************
//
// transforms utility functions
//
// *****************************************************************************************************************************
procedure NewtonSetEulerAngle(const eulersAngles: PdFloat; matrix: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonSetEulerAngle'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonGetEulerAngle(const matrix: PdFloat; eulersAngles: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonGetEulerAngle'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonCalculateSpringDamperAcceleration(dt, ks, x, kd, s: dFloat): dFloat; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCalculateSpringDamperAcceleration'{$ELSE}NewtonDLL{$ENDIF __GPC__};

// *****************************************************************************************************************************
//
// body manipulation functions
//
// *****************************************************************************************************************************
function NewtonCreateBody(const NewtonWorld: PNewtonWorld; const collision: PNewtonCollision;
  const matrix: PdFloat): PNewtonBody; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCreateBody'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonDestroyBody(const NewtonWorld: PNewtonWorld; const Body: PNewtonBody); cdecl;
  external{$IFDEF __GPC__}name 'NewtonDestroyBody'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodyAddForce(const Body: PNewtonBody; const Force: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyAddForce'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodyAddTorque(const Body: PNewtonBody; const torque: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyAddTorque'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodyCalculateInverseDynamicsForce(const Body: PNewtonBody; timestep: dFloat;
  const desiredVeloc: PdFloat; forceOut: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyCalculateInverseDynamicsForce'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetMatrix(const Body: PNewtonBody; const matrix: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetMatrix'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetMatrixRecursive(const Body: PNewtonBody; const matrix: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetMatrixRecursive'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetMassMatrix(const Body: PNewtonBody; mass: dFloat; Ixx: dFloat; Iyy: dFloat;
  Izz: dFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetMassMatrix'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetMaterialGroupID(const Body: PNewtonBody; id: integer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetMaterialGroupID'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetContinuousCollisionMode(const Body: PNewtonBody; state: integer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetContinuousCollisionMode'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetJointRecursiveCollision(const Body: PNewtonBody; state: unsigned_int); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetJointRecursiveCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetOmega(const Body: PNewtonBody; const omega: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetOmega'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetVelocity(const Body: PNewtonBody; const velocity: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetVelocity'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetForce(const Body: PNewtonBody; const Force: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetForce'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetTorque(const Body: PNewtonBody; const torque: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetTorque'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetCentreOfMass(const Body: PNewtonBody; const com: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetCentreOfMass'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetLinearDamping(const Body: PNewtonBody; linearDamp: dFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetLinearDamping'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetAngularDamping(const Body: PNewtonBody; const angularDamp: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetAngularDamping'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBodySetUserData(const Body: PNewtonBody; userData: Pointer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetUserData'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetCollision(const Body: PNewtonBody; const collision: PNewtonCollision); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBodyGetSleepState(const Body: PNewtonBody): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetSleepState'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBodyGetAutoSleep(const Body: PNewtonBody): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetAutoSleep'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetAutoSleep(const Body: PNewtonBody; state: integer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetAutoSleep'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBodyGetFreezeState(const Body: PNewtonBody): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetFreezeState'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetFreezeState(const Body: PNewtonBody; state: integer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetFreezeState'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetDestructorCallback(const Body: PNewtonBody; callback: NewtonBodyDestructor);
  cdecl; external{$IFDEF __GPC__}name 'NewtonBodySetDestructorCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetTransformCallback(const Body: PNewtonBody; callback: NewtonSetTransform);
  cdecl; external{$IFDEF __GPC__}name 'NewtonBodySetTransformCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetTransformCallback(const Body: PNewtonBody): NewtonSetTransform; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetForceAndTorqueCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBodySetForceAndTorqueCallback(const Body: PNewtonBody;
  callback: NewtonApplyForceAndTorque); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodySetForceAndTorqueCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetForceAndTorqueCallback(const Body: PNewtonBody): NewtonApplyForceAndTorque;
  cdecl; external{$IFDEF __GPC__}name 'NewtonBodyGetForceAndTorqueCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetUserData(const Body: PNewtonBody): Pointer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetUserData'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetWorld(const Body: PNewtonBody): PNewtonWorld; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetWorld'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetCollision(const Body: PNewtonBody): PNewtonCollision; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBodyGetMaterialGroupID(const Body: PNewtonBody): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBodyGetMaterialGroupID'{$ELSE}NewtonDLL{$ENDIF __GPC__};
